--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="icon" href="./GreenCloud_iconb.png">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.2.0/knockout-min.js"></script>
-	<script type="text/javascript" src="./main.js">
+	<script type="text/javascript" src="./main.js"></script>
 	<link rel="stylesheet" type="text/css" href="main.css">
 
 </head>
