--- a/login/index.html
+++ b/login/index.html
@@ -26,11 +26,11 @@
                             <form action="" method="post" name="login">
                                 <div class="form-group">
                                     <label for="email">Email address</label>
-                                    <input type="email" name="email"  class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+                                    <input type="email" name="email"  class="form-control" id="email" value = "greencloud@ua.pt" aria-describedby="emailHelp" placeholder="Enter email">
                                 </div>
                                 <div class="form-group">
                                     <label for="password">Password</label>
-                                    <input type="password" name="password" id="password"  class="form-control" aria-describedby="emailHelp" placeholder="Enter Password">
+                                    <input type="password" name="password" id="password"  value = "gcmasua" class="form-control" aria-describedby="emailHelp" placeholder="Enter Password">
                                     <div class="alert alert-danger no_error" id="name_error" style="display: none">Password incorrect!</div>
 
                                 </div>
