--- a/booking/booking.html
+++ b/booking/booking.html
@@ -18,6 +18,7 @@
 
 </head>
 <body>
+
     <div class="container" style="padding-top: 10%; padding-bottom: 5%">
         <div class="row">
             <div class="col-12"><h2>Where do you want to go?</h2></div>
@@ -42,50 +43,56 @@
                 <div class="row align-items-center justify-content-center">
                                     <div class="col-md-2" >
                                        <div class="form-group pt-3">
-                                          <select id="inputState " class="form-control">
-                                            <option selected>Price</option>
-                                            <option>Free</option>
-                                            <option>0-40€</option>
-                                            <option>40-100€</option>
-                                            <option>Over 100€</option>
+                                          <select id="priceState" class="form-control">
+                                            <option selected value="Price">Price</option>
+                                            <option value= "0">Free</option>
+                                            <option value="1,40">1-40€</option>
+                                            <option value="41,100">41-100€</option>
+                                            <option value="100+">Over 100€</option>
                                           </select>
                                        </div>
                                     </div>
                                     <div class="col-md-2 pt-3">
                                        <div class="form-group">
-                                          <select id="inputState" class="form-control">
+                                          <select id="biomState" class="form-control">
                                             <option selected>Biom</option>
-                                            <option>Montain</option>
-                                            <option>City</option>
-                                            <option>Forest</option>
-                                            <option>Desert</option>
+                                            <option value="Montain">Montain</option>
+                                            <option value="City">City</option>
+                                            <option value="Forest">Forest</option>
+                                            <option value="Desert">Desert</option>
                                           </select>
                                        </div>
                                     </div>
                                     <div class="col-md-2 pt-3">
                                         <div class="form-group">
-                                          <select id="inputState" class="form-control">
+                                          <select id="ratingState" class="form-control">
                                             <option selected>Rating</option>
-                                            <option>0 stars</option>
-                                            <option>1 star</option>
-                                            <option>2 stars</option>
-                                            <option>3 stars</option>
-                                            <option>4 stars</option>
-                                            <option>5 stars</option>
+                                            <option value="0" >0 stars</option>
+                                            <option value="1" >1 star</option>
+                                            <option value="2" >2 stars</option>
+                                            <option value="3" >3 stars</option>
+                                            <option value="4" >4 stars</option>
+                                            <option value="5" >5 stars</option>
                                           </select>
                                         </div>
                                     </div>
                                     <div class="col-md-2 pt-3">
                                         <div class="form-group">
-                                          <select id="inputState" class="form-control">
-                                            <option selected>Activity</option>
-                                            <option>Hiking</option>
-                                            <option>Boat</option>
-                                            <option>Tourist guide</option>
-                                            <option>Hotel</option>
+                                          <select id="activityState" class="form-control">
+                                            <option selected value="Activity">Activity</option>
+                                            <option value="Hiking" >Hiking</option>
+                                            <option value="BoatRide">BoatRide</option>
+                                            <option value="Tourist Guide">Tourist Guide</option>
+                                            <option value="Hotel">Hotel</option>
                                           </select>
                                         </div>
                                     </div>
+                                    <div class="col-md-2 pt-3">
+                                            <div class="form-group">
+                                              <button class="btn" id="filterBtn" style="width: 100%; background-color: #708C74; color: white">Filter</button>
+                                              <button class="btn" id="clearBtn" style="background-color: #708C74; color: white">Clear</button>
+                                            </div>
+                                        </div>
                                    
                                 </div>
             </div>
