--- a/index.html
+++ b/index.html
@@ -39,12 +39,18 @@
 				<button  class="btn btn-outlined btn-white btn-lg" data-wow-delay="0.7s" > About</button>
 			</div>
 		</div>
-		<div>
-			<h1>GreenCloud</h1>
+		<div class="text-center" style="margin-top: 20vh ">
+			<h1 >GreenCloud</h1>
+			<button id="arrow_box" style="position: absolute; left: 50vw; margin-top: 35vh" class="btn btn-outlined btn-white btn-lg" data-wow-delay="0.7s" style=" position: absolute; right: 8vw"> <i id="arrow" class="fas fa-angle-double-down"></i></button>
+
+
 		</div>
 		<div class="row">
-			<h3 id="quote" style="color: white; margin-top: 63vh; margin-left: 2vw">"In a world full of noise, stress and virtual connections,<br> our goal is to create a bond with nature."</h3>
-			<button id="arrow_box" style="position: absolute; left: 50vw; margin-top: 65vh" class="btn btn-outlined btn-white btn-lg" data-wow-delay="0.7s" style=" position: absolute; right: 8vw"> <i id="arrow" class="fas fa-angle-double-down"></i></button>
+			<div class="col-md-6">
+			<h3 id="quote" style="color: white; margin-top: 35vh; margin-left: 1vw">"In a world full of noise, stress and virtual connections,<br> our goal is to create a bond with nature."</h3>
+			</div>
+			<div class="cold-md-2">
+			</div>
 		</div>
 
 	</div>
