--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 	</div>
 	<div id=main_text class="container-fluid">
-		<h4> Created in 2019 in a small town in Portugal, GreenCloud's goal is to connect you to Nature through amazing and breath-taking experiences of your choice. </h4>
+		<h4> Created in 2019 in a small city in Portugal, GreenCloud's goal is to connect you to Nature through amazing and breath-taking experiences of your choice. </h4>
 	</div>
 	<br>
 
@@ -85,13 +85,13 @@
 			</div>
 
 			<div class="col-lg-4 option" >
-				<a href="./booking/booking.html">
+				<a href="#">
 					<h4>Client support</h4>
 				</a>
 			</div>
 
 			<div class="col-lg-4 option" >
-				<a href="./booking/booking.html">
+				<a href="#">
 					<h4>About our investor</h4>
 				</a>
 			</div>
@@ -149,7 +149,7 @@
 					</div>
 				</div>
 				<div id="msg">
-					<h3 style="text-align: center">Thank you for submitting your experience, we will review it and if it get's accepted we will notify you by email.</h2>
+					<h3 style="text-align: center">Thank you for submitting your experience, we will review it and if it gets accepted we will notify you by email.</h2>
 				</div>
 				<div id="notPartner">
 						<h3 style="text-align: center">Only partners can acess this part of the websites (yet).</h2>
