--- a/info/info.html
+++ b/info/info.html
@@ -130,8 +130,8 @@
                 <h5>
                     In case of any doubts, you can easily get connected to a member of our staff, which will clarify you
                     to the best of their ability, even calling you for free, if needed.<br><br>
-                    You can reach us by email: greencloudua@ua.pt and follow our social media accounts, we gladly
-                    answere to questions there too<br> </h5>
+                    You can reach us by email at greencloudua@ua.pt and follow our social media accounts, we'll gladly
+                    answere your questions there too<br> </h5>
 
                     <div class="row">
                         <div class="col-md-3">
