--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
 
 	<div class="modal fade" id="chat" tabindex="-1" role="dialog" aria-hidden="true">
-		<div class="modal-dialog  modal-lg" role="document">
+		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 
 
