--- a/info/info.html
+++ b/info/info.html
@@ -20,10 +20,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="icon" href="../GreenCloud_iconb.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css"
-		integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+        integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.2.0/knockout-min.js"></script>
     <script type="text/javascript" src="./info.js"></script>
-    <link rel="stylesheet" type="text/css" href="info.css">
+    <link rel="stylesheet" type="text/css" href="./info.css">
 
 </head>
 
@@ -39,8 +39,8 @@
         <div class="text-center" style="margin-top: 20vh">
             <h1>GreenCloud</h1>
             <button id="arrow_box" style="position: absolute; left: 50vw; margin-top: 0vh"
-				class="btn btn-outlined btn-white btn-lg" data-wow-delay="0.7s" style=" position: absolute; right: 8vw">
-				<i id="arrow" class="fas fa-angle-double-down"></i></button>
+                class="btn btn-outlined btn-white btn-lg" data-wow-delay="0.7s" style=" position: absolute; right: 8vw">
+                <i id="arrow" class="fas fa-angle-double-down"></i></button>
         </div>
     </div>
 
@@ -69,7 +69,7 @@
 
         <div class="row">
             <div class="col-md-3">
-                <img src="../track.jpg">
+                <img style="width:100%" src="../track.jpg">
             </div>
 
             <div class="col-md-9" style=" padding-top: 6vw">
@@ -95,7 +95,7 @@
             </div>
 
             <div class="col-md-3">
-                <img src="../trees.jpg">
+                <img style="width: 100%" src="../trees.jpg">
             </div>
 
 
@@ -130,20 +130,13 @@
                 <h5>
                     In case of any doubts, you can easily get connected to a member of our staff, which will clarify you
                     to the best of their ability, even calling you for free, if needed.<br><br>
-                    You can reach us by email at greencloudua@ua.pt and follow our social media accounts, we'll gladly
-                    answere your questions there too<br> </h5>
+                    You can reach us by email: greencloudua@ua.pt and follow our social media accounts, we gladly
+                    answere to questions there too<br> </h5>
 
-                    <div class="row">
-                        <div class="col-md-3">
-                            <button class="btn"><img src="../twitter.png" style="width: 100%"></button>
-                        </div>
-                        <div class="col-md-3">
-                            <button class="btn"><img src="../insta.png" style="width: 100%"></button>
-                        </div>
-                        <div class="col-md-3">
-                            <button class="btn"><img src="../linkedin.png" style="width: 100%"></button>
-                        </div>
-                    </div>
+                <button class="btn"><img src="../twitter.png" style="width: 2vw"></button>
+                <button class="btn"><img src="../insta.png" style="width: 2vw"></button>
+                <button class="btn"><img src="../linkedin.png" style="width: 2vw"></button>
+
 
 
             </div>
@@ -158,26 +151,26 @@
         </div>
 
 
-            <div class="row" style="padding-top: 5vh">
-                <div class="col-md-9">
-                    <h2>About our investor</h2>
-                    <h5>GoPlaces is a hotel search tool with wide recnognition around the globe. In the hopes of
-                        expanding to a greener branch they invested in our business, once they are connected to the same
-                        area. If you are looking for a platform that, not only, shows you the best hotels in the area,
-                        but also compares prices and condition, go and visit them.
-                    </h5>
-                </div>
+        <div class="row" style="padding-top: 5vh">
+            <div class="col-md-9">
+                <h2>About our investor</h2>
+                <h5>GoPlaces is a hotel search tool with wide recnognition around the globe. In the hopes of
+                    expanding to a greener branch they invested in our business, once they are connected to the same
+                    area. If you are looking for a platform that, not only, shows you the best hotels in the area,
+                    but also compares prices and condition, go and visit them.
+                </h5>
+            </div>
 
-                <div class="col-md-3">
-                    <img src="../GoPlacesIcon.png">
-                </div>
-
-
+            <div class="col-md-3">
+                <img style="width: 100%" src="../GoPlacesIcon.png">
             </div>
 
 
+        </div>
 
-        
+
+
+
 
 
 
