--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<button id="login" class="btn btn-outlined btn-white btn-lg" data-wow-delay="0.7s"><i
 							class="fa fa-user" aria-hidden="true"></i> Account</button>
 					<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-						<a class="dropdown-item" href="#"><i class="fa fa-user" aria-hidden="true"></i> Profile</a>
+						<a class="dropdown-item" id="profileButton" href="#"><i class="fa fa-user" aria-hidden="true"></i> Profile</a>
 						<a class="dropdown-item" href="#"><i class="fas fa-bell"></i> Notification</a>
 						<a class="dropdown-item" id="logout" href="#"><i class="fas fa-sign-out-alt"></i> Log Out</a>
 					</div>
